<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TechnoRead</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="openinbrowser">Open in Browser</string>
    <string name="menu_share">Share</string>
    <string name="menu_configure">Configure</string>
    <string name="title_activity_configure">ConfigureActivity</string>
	<string name="menu_save">Save</string>
	<string name="menu_add">Add</string>
	<string name="titleHintText">Enter Title Here</string>
	<string name="descriptionHintText">Enter description here</string>
	<string name="urlHintText">Enter Url Here</string>
	<string name="openInlineHintText">Open In TechnoReader</string>
	<string name="saveButton">Save</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_showSource">Show Sources</string>
	
</resources>