<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    
    <item
        android:id="@+id/menu_openinbrowser"
        android:orderInCategory="200"
        android:showAsAction="always"
        android:title="@string/openinbrowser"
        android:icon="@drawable/open_icon"
        />
    
    <item
        android:id="@+id/menu_share"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:title="@string/menu_share"
        android:icon="@drawable/social_share"
        />
    
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="400"
        android:showAsAction="always"
        android:title="@string/menu_refresh"
        android:icon="@drawable/navigation_refresh"
        />
    
		<item
        android:id="@+id/menu_configure"
        android:orderInCategory="500"
        android:showAsAction="always"
        android:title="@string/menu_configure"
        android:icon="@drawable/action_settings"
        />
</menu>